# mcp-server-client

./: Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  sonar-project.properties
deploy/: deploy.sh
deploy/resources/dev/: ingress-tfk.yml  service.yml
deploy/resources/prod/: ingress-tfk.yml  service.yml
deploy/templates/: deployment.yml
devex_mcp/: server.py
devex_mcp/libs/: ResponseApiError.py
devex_mcp/repositories/: DescriptorsApiRepository.py  MsCatalogApiRepository.py  __init__.py
devex_mcp_client/: README.md  pyproject.toml
devex_mcp_client/client/: auth_manager.py  bridge.py  main.py  version_manager.py
devex_mcp_setup/: README.md  __init__.py  auth_installer.py  installer.py  pyproject.toml  setup.ps1  setup.sh
test/libs/: __init__.py  test_ResponseApiError.py
test/repositories/: __init__.py  test_DescriptorsApiRepository.py  test_MsCatalogApiRepository.py
test/server/: __init__.py  test_server.py
test/siege_test/: monitoring.sh  payload.json  siege_test.sh
