[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devex-mcp"
version = "1.0.3"
description = "MCP server to fetch and analyze microservice API documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "mcp[cli]>=1.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["devex_mcp"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["devex_mcp"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
