[project]
name = "devex-mcp-client"
version = "1.0.3"
description = "Bridge Client for Devex MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "httpx",
    "typer",
    "starlette",
    "keyring"
]

[project.scripts]
devex-mcp = "client.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client"]
